# senior-coding-challenge-raphael

./: README.md  pyproject.toml
src/: model_generator.py
tests/: example_schema.json  test_model_generator.py
