[tool.poetry]
name = "senior-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Dave <shrps@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pydantic = "2"
pytest = "^7.4.3"
dlt = "^0.3.25"
black = "^23.12.0"
mypy = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
